--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,159 @@
-<div class="p-3 mb-2 bg-success text-white">
-    <h1  style="font-family: 'Times New Roman' ">MPD NEWS</h1>
-  </div>
-<router-outlet></router-outlet>
-<div class="p-3 mb-2 bg-success text-white">
-    <h1  style="font-family: 'Times New Roman' ">MPD NEWS</h1>
-  </div>
-  <div style="background-color:rgb(79, 71, 71)" class="container-fluid">
-    <div class="d-flex flex-column bd-highlight mb-3">
-      <div class="p-2 text-white">Flex item 1</div>
-      <div class="p-2 text-white">Flex item 2</div>
-      <div class="p-2 text-white">Flex item 3</div>
-      <div class="p-2 text-white">Flex item 3</div>
-      <div class="p-2 text-white">Flex item 3</div>
-      <div class="p-2 text-white">Flex item 3</div>
+
+<!-- Top Header Start -->
+<div class="top-header">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-3 col-md-4">
+                <div class="logo">
+                    <a href="">
+                        <img src="img/logo.png" alt="Logo">
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-4">
+                <div class="search">
+                    <input type="text" placeholder="Search">
+                    <button><i class="fa fa-search"></i></button>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4">
+                <div class="social">
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+<!-- Top Header End -->
+
+<!-- Header Start -->
+<div class="header">
+    <div class="container">
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a href="#" class="navbar-brand">MENU</a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <div class="navbar-nav m-auto">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="#" class="nav-item nav-link">Sports</a>
+                    <a href="#" class="nav-item nav-link">Tech</a>
+                    <a href="#" class="nav-item nav-link">Fashion</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
+                        <div class="dropdown-menu">
+                            <a href="#" class="dropdown-item">Sub Item 1</a>
+                            <a href="#" class="dropdown-item">Sub Item 2</a>
+                        </div>
+                    </div>
+                    <a href="single-page.html" class="nav-item nav-link">Single Page</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                </div>
+            </div>
+        </nav>
+    </div>
+</div>
+<!-- Header End -->
+<router-outlet></router-outlet>
+
+<!-- Footer Start -->
+<div class="footer">
+<div class="container-fluid">
+<div class="row">
+    <div class="col-lg-3 col-md-6">
+        <div class="footer-widget">
+            <h3 class="title">Useful Links</h3>
+            <ul>
+                <li><a href="#">Pellentesque</a></li>
+                <li><a href="#">Aliquam</a></li>
+                <li><a href="#">Fusce placerat</a></li>
+                <li><a href="#">Nulla hendrerit</a></li>
+                <li><a href="#">Maecenas</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="footer-widget">
+            <h3 class="title">Quick Links</h3>
+            <ul>
+                <li><a href="#">Posuere egestas</a></li>
+                <li><a href="#">Sollicitudin</a></li>
+                <li><a href="#">Luctus non</a></li>
+                <li><a href="#">Duis tincidunt</a></li>
+                <li><a href="#">Elementum</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="footer-widget">
+            <h3 class="title">Get in Touch</h3>
+            <div class="contact-info">
+                <p><i class="fa fa-map-marker"></i>123 Terry Lane, New York, USA</p>
+                <p><i class="fa fa-envelope"></i>email@example.com</p>
+                <p><i class="fa fa-phone"></i>+123-456-7890</p>
+                <div class="social">
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-facebook"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-lg-3 col-md-6">
+        <div class="footer-widget">
+            <h3 class="title">Newsletter</h3>
+            <div class="newsletter">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed porta dui. Class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos
+                </p>
+                <form>
+                    <input class="form-control" type="email" placeholder="Your email here">
+                    <button class="btn">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+<!-- Footer End -->
+    
+    
+<!-- Footer Bottom Start -->
+<div class="footer-bottom">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 copyright">
+                <p>Copyright &copy; <a href="https://htmlcodex.com">HTML Codex</a>. All Rights Reserved</p>
+            </div>
+
+            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            <div class="col-md-6 template-by">
+                <p>Template By <a href="https://htmlcodex.com">HTML Codex</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer Bottom End -->
+
+    
+
+
+
+
+
+
+
+
+
