--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,71 +1,216 @@
 
 <p>Home works</p>
 
-<ul  style="font-family: 'Times New Roman';font-size:xx-large;" class="nav justify-content-center">
-  <li  class="nav-item">
-    <a style="color:rgb(25, 135, 84)" class="nav-link active" aria-current="page" href="#">Temp</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Temp</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Temp</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link ">Temp</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link ">Temp</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link ">Temp</a>
-  </li>
-</ul>
+
 <router-outlet></router-outlet>
 
 <div class="container">
   <hr>
-<div class="row">
-  <div class="col-3" *ngFor="let item of allitem" >
-    <div class="card-deck" >
-      <br>
-      <div class="card">
-        <img class="card-img-top" [src]="item.image" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">{{item.title}}</h5>
-            <p class="card-text">{{item.article}}...</p>
-            <a href="#" class="card-link" style="color:rgb(25, 135, 84)" routerLink="/news" >Read News</a>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+  <div class="top-news">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 tn-left">
+                <div class="tn-img">
+                    <img [src]="allitem[0].image" />
+                    <div class="tn-content">
+                        <div class="tn-content-inner">
+                            <a class="tn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                            <a class="tn-title" href="" [routerLink]="['news/',allitem[0].nId]">{{allitem[0].title}}</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 tn-right">
+                <div class="row">
+                    <div class="col-md-6" *ngFor="let item of newArray ">
+                        <div class="tn-img"  >
+                            <img [src]="item.image" />
+                            <div class="tn-content">
+                                <div class="tn-content-inner">
+                                    <a class="tn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                    <a class="tn-title" href=""  [routerLink]="['/news',item.nId]">{{item.title}}</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <!-- Category News Start-->
+  <div class="cat-news">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <h2><i class="fas fa-align-justify"></i>Business</h2>
+                <div class="row cn-slider">
+                    <div class="col-md-6" *ngFor="let item of newArray">
+                        <div class="cn-img">
+                            <img [src]="item.image" />
+                            <div class="cn-content">
+                                <div class="cn-content-inner">
+                                    <a class="cn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                    <a class="cn-title" href="" [routerLink]="['/news',item.nId]">{{item.title}}</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h2><i class="fas fa-align-justify"></i>Entertainment</h2>
+                <div class="row cn-slider">
+                    <div class="col-md-6" *ngFor="let item of newArray">
+                        <div class="cn-img">
+                            <img [src]="item.image" />
+                            <div class="cn-content">
+                                <div class="cn-content-inner">
+                                    <a class="cn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                    <a class="cn-title" href="">{{item.title}}</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  <!-- Category News End-->
+
+
+
+<!-- Main News Start-->
+<div class="main-news">
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-8">
+              <div class="row">
+                  <div class="col-md-12">
+                      <h2><i class="fas fa-align-justify"></i>Latest News</h2>
+                      <div class="row">
+                          <div class="col-lg-6" >
+                              <div class="mn-img">
+                                  <img [src]="allitem[0].image" />
+                              </div>
+                              <div class="mn-content">
+                                  <a class="mn-title" href="">{{allitem[0].title}}</a>
+                                  <a class="mn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                  <p>
+                                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed porta dui. Class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos...
+                                  </p>
+                              </div>
+                          </div>
+                          <div class="col-lg-6">
+                              <div class="mn-list" *ngFor="let item of newArray">
+                                  <div class="mn-img">
+                                      <img [src]="item.image" />
+                                  </div>
+                                  <div class="mn-content">
+                                      <a class="mn-title" href="">{{item.title}}</a>
+                                      <a class="mn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-md-12">
+                      <h2><i class="fas fa-align-justify"></i>Popular News</h2>
+                      <div class="row">
+                          <div class="col-lg-6">
+                              <div class="mn-img">
+                                  <img [src]="allitem[0].image" />
+                              </div>
+                              <div class="mn-content">
+                                  <a class="mn-title" href="">{{allitem[0].title}}</a>
+                                  <a class="mn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                  <p>
+                                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed porta dui. Class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos...
+                                  </p>
+                              </div>
+                          </div>
+                          <div class="col-lg-6">
+                              <div class="mn-list" *ngFor="let item of newArray">
+                                  <div class="mn-img">
+                                      <img [src]="item.image" />
+                                  </div>
+                                  <div class="mn-content">
+                                      <a class="mn-title" href="">{{item.title}}</a>
+                                      <a class="mn-date" href=""><i class="far fa-clock"></i>05-Feb-2020</a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-md-4">
+              <div class="sidebar">
+                  <div class="sidebar-widget">
+                      <h2><i class="fas fa-align-justify"></i>Category</h2>
+                      <div class="category">
+                          <ul class="fa-ul">
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">National</a></li>
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">International</a></li>
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">Economics</a></li>
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">Politics</a></li>
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">Lifestyle</a></li>
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">Technology</a></li>
+                              <li><span class="fa-li"><i class="far fa-arrow-alt-circle-right"></i></span><a href="">Trades</a></li>
+                          </ul>
+                      </div>
+                  </div>
+
+                  <div class="sidebar-widget">
+                      <h2><i class="fas fa-align-justify"></i>Tags</h2>
+                      <div class="tags">
+                          <a href="">National</a>
+                          <a href="">International</a>
+                          <a href="">Economics</a>
+                          <a href="">Politics</a>
+                          <a href="">Lifestyle</a>
+                          <a href="">Technology</a>
+                          <a href="">Trades</a>
+                          <a href="">National</a>
+                          <a href="">International</a>
+                          <a href="">Economics</a>
+                          <a href="">Politics</a>
+                          <a href="">Lifestyle</a>
+                          <a href="">Technology</a>
+                          <a href="">Trades</a>
+                      </div>
+                  </div>
+
+                  <div class="sidebar-widget">
+                      <h2><i class="fas fa-align-justify"></i>Ads 1 column</h2>
+                      <div class="image">
+                          <a href=""><img [src]="allitem[0].image" alt="Image"></a>
+                      </div>
+                  </div>
+
+                  <div class="sidebar-widget">
+                      <h2><i class="fas fa-align-justify"></i>Ads 2 column</h2>
+                      <div class="image">
+                          <div class="row">
+                              <div class="col-sm-6">
+                                  <a href=""><img [src]="allitem[0].image" alt="Image"></a>
+                              </div>
+                              <div class="col-sm-6">
+                                  <a href=""><img [src]="allitem[0].image" alt="Image"></a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
       </div>
-    </div>
   </div>
 </div>
-</div>
-  <div class="container">
-    <div class="row">
-      <div class="col-5">
-        <br> 
-        <img src="" width="100%" alt="">
-      </div>
-      <div class="col-5">
-        <br> 
-        <h2>This is a dummy  text  of 14 words max bit longer</h2>
-      </div>
-    </div>
-  </div>
-  <div class="container">
+<!-- Main News End-->
+
 
 </div>
-  <nav class="nav justify-content-center" style="font-family: 'Times New Roman';" aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item" ><a style="color:rgb(25, 135, 84)"class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a style="color:rgb(25, 135, 84)" class="page-link" href="#">Next</a></li>
-    </ul>
-  </nav>
-
-
-  
