--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,20 +1,22 @@
 <p>view works</p>
 <div class="container-small">
     <div class="row">
-        <div class="col-sm-7">
-            <img src="" width="100%" alt="">
-           
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro dolorum accusantium unde, commodi, ad sint eos nihil eius culpa, iusto tempora reprehenderit fuga officia fugiat quia tenetur consequatur et! Dolore repellat inventore consequuntur excepturi facilis iste natus necessitatibus at incidunt quis, eligendi nostrum rem quas minus eum doloremque eius molestiae soluta ut expedita? Provident unde est nobis dignissimos nihil repellat dicta mollitia id? Commodi.
-            </p>
+        <div class="col-sm-7" *ngFor="let item of allitem">
+            <div *ngIf="item.newsId==id">
+                <img [src]="item.image" width="100%" alt="">
+                <h2>{{item.title}}</h2>
+                <p>{{item.para}}</p>
+            </div>
+            
         </div>
         <div class="col-sm-4" >
-            <ul *ngFor="let n of arr" >
+            <ul *ngFor="let n of arr">
                 <a class="h5"><li>The fake news of 14 to 15 words maximum</li> </a>
             </ul>
         </div>
     </div>
 </div>
-        
+ 
 <div class="container">
     <div class="row">
         <div class="col-3" *ngFor="let n of arr">
